sylt-old/progs/tests/func/uncallable_type.sy
start :: fn {
    f := fn i: int {
        i()
    }
    f
}

// error: #InvalidProgram
